--- a/src/main/resources/fxml/dictionary.fxml
+++ b/src/main/resources/fxml/dictionary.fxml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="269.0" prefWidth="522.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Dictionary">
    <children>
-      <AnchorPane prefHeight="402.0" prefWidth="461.0">
-         <children>
-            <ScrollPane fx:id="scrollPane" layoutX="-5.0" layoutY="-3.0" prefHeight="413.0" prefWidth="527.0">
-               <content>
-                  <TextArea fx:id="allTerms" prefHeight="409.0" prefWidth="520.0" />
-               </content></ScrollPane>
-         </children>
-      </AnchorPane>
+      <ScrollPane fx:id="scrollPane" prefHeight="476.0" prefWidth="527.0">
+         <content>
+            <AnchorPane>
+               <children>
+                  <TextArea fx:id="allTerms" layoutX="21.0" layoutY="40.0" prefHeight="383.0" prefWidth="486.0" />
+                  <Label layoutX="185.0" layoutY="5.0" text="Terms Dictionary" />
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
+      <Button fx:id="back" onAction="#back" layoutX="232.0" layoutY="435.0" mnemonicParsing="false" text="BACK" />
    </children>
 </AnchorPane>
