--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -18,12 +18,14 @@
                <font>
                   <Font name="Segoe UI Italic" size="18.0" />
                </font></Button>
-            <Button fx:id="reset" layoutX="8.0" layoutY="-8.0" mnemonicParsing="false" onAction="#reset" text="Reset" />
-            <Button fx:id="displayDictionary" disable="true" layoutX="8.0" layoutY="81.0" mnemonicParsing="false" onAction="#displayDictionary" text="Display Dictionary" />
-            <CheckBox fx:id="stemming" layoutX="104.0" layoutY="239.0" mnemonicParsing="false" text="Stemming" />
-            <TextField fx:id="query" disable="true" layoutX="104.0" layoutY="148.0" prefHeight="39.0" prefWidth="358.0" />
-            <ComboBox fx:id="languages" disable="true" layoutX="104.0" layoutY="194.0" prefHeight="39.0" prefWidth="218.0" promptText="Choose Language" />
-            <Button fx:id="loadDictionary" disable="true" layoutX="8.0" layoutY="37.0" mnemonicParsing="false" onAction="#loadDictionary" text="load dictionary" />
+            <Button fx:id="reset" layoutX="537.0" mnemonicParsing="false" onAction="#reset" text="Reset" visible="false" />
+            <CheckBox fx:id="stemming" layoutX="104.0" layoutY="249.0" mnemonicParsing="false" text="Stemming" />
+            <TextField fx:id="query" disable="true" layoutX="104.0" layoutY="156.0" prefHeight="39.0" prefWidth="358.0" />
+            <ComboBox fx:id="languages" disable="true" layoutX="104.0" layoutY="204.0" prefHeight="39.0" prefWidth="218.0" promptText="Choose Language" />
+             <Button fx:id="displayTermsDictionary" disable="true" layoutX="191.0" mnemonicParsing="false" onAction="#displayTermsDictionary" text="Terms Dictionary" />
+             <Button fx:id="loadTermsDictionary" disable="true" layoutY="-1.0" mnemonicParsing="false" onAction="#loadTermsDictionary" text="Load Terms" />
+            <Button fx:id="loadDocsDictionary" disable="true" layoutY="46.0" mnemonicParsing="false" onAction="#loadDocsDictionary" text="Load Documents" />
+            <Button fx:id="loadCitiesDictionary" disable="true" layoutY="94.0" mnemonicParsing="false" onAction="#loadCitiesDictionary" text="Load Cities" />
          </children>
       </AnchorPane>
    </children>
