--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -18,7 +18,7 @@
                <font>
                   <Font name="Segoe UI Italic" size="18.0" />
                </font></Button>
-            <Button fx:id="reset" layoutX="537.0" mnemonicParsing="false" onAction="#reset" text="Reset" visible="false" />
+            <Button fx:id="reset" disable="true" layoutX="537.0" mnemonicParsing="false" onAction="#reset" text="Reset" />
             <CheckBox fx:id="stemming" layoutX="104.0" layoutY="249.0" mnemonicParsing="false" text="Stemming" />
             <TextField fx:id="query" disable="true" layoutX="104.0" layoutY="156.0" prefHeight="39.0" prefWidth="358.0" />
             <ComboBox fx:id="languages" disable="true" layoutX="104.0" layoutY="204.0" prefHeight="39.0" prefWidth="218.0" promptText="Choose Language" />
