--- a/src/main/resources/fxml/browser.fxml
+++ b/src/main/resources/fxml/browser.fxml
@@ -5,14 +5,15 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="318.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.browser">
+<AnchorPane prefHeight="318.0" prefWidth="368.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.browser">
    <children>
-      <Button fx:id="OK" layoutX="161.0" layoutY="262.0" mnemonicParsing="false" onAction="#ok" text="OK" />
+      <Button fx:id="OK" layoutX="291.0" layoutY="130.0" mnemonicParsing="false" onAction="#ok" text="OK" />
       <TextField fx:id="corpusPath" layoutX="14.0" layoutY="75.0" prefHeight="39.0" prefWidth="219.0" text="Enter Path" />
        <Button fx:id="browseCorpus" layoutX="245.0" layoutY="75.0" mnemonicParsing="false" onAction="#browseCorpus" prefHeight="39.0" prefWidth="26.0" text="..." />
       <TextField fx:id="postingPath" layoutX="15.0" layoutY="176.0" prefHeight="39.0" prefWidth="219.0" text="Enter Path" />
       <Button fx:id="browsePosting" layoutX="246.0" layoutY="176.0" mnemonicParsing="false" onAction="#browsePosting" prefHeight="39.0" prefWidth="26.0" text="..." />
       <Label layoutX="15.0" layoutY="32.0" prefHeight="27.0" prefWidth="110.0" text="corpus path:" />
       <Label layoutX="16.0" layoutY="136.0" prefHeight="27.0" prefWidth="110.0" text="posting path:" />
+      <Button fx:id="back" onAction="#back" layoutX="149.0" layoutY="272.0" mnemonicParsing="false" text="BACK" />
    </children>
 </AnchorPane>
