--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,27 +12,32 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" onMouseEntered="#initCities" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
+<GridPane alignment="center" hgap="10" onMouseEntered="#initCities" prefWidth="605.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
    <children>
-      <AnchorPane prefHeight="365.0" prefWidth="605.0">
+      <AnchorPane prefHeight="600.0" prefWidth="605.0">
          <children>
-            <Button fx:id="start" layoutX="270.0" layoutY="324.0" mnemonicParsing="false" onAction="#startWindow" text="Start">
+            <Button fx:id="processCorpus" layoutX="223.0" layoutY="518.0" mnemonicParsing="false" onAction="#processCorpus" text="Process corpus">
                <font>
                   <Font name="Segoe UI Italic" size="18.0" />
                </font></Button>
-            <Button fx:id="reset" disable="true" mnemonicParsing="false" onAction="#reset" prefHeight="27.0" prefWidth="68.0" text="Reset" />
-            <CheckBox fx:id="stemming" layoutX="104.0" layoutY="249.0" mnemonicParsing="false" text="Stemming" />
-            <TextField fx:id="query" layoutX="104.0" layoutY="156.0" prefHeight="39.0" prefWidth="358.0" />
-            <ComboBox fx:id="languages" disable="true" layoutX="104.0" layoutY="204.0" prefHeight="39.0" prefWidth="218.0" promptText="Choose Language" />
-             <Button fx:id="displayTermsDictionary" disable="true" layoutY="95.0" mnemonicParsing="false" onAction="#displayTermsDictionary" text="Display Terms" />
-             <Button fx:id="loadDictionaries" layoutY="49.0" mnemonicParsing="false" onAction="#loadDictionaries" text="Load Dictionaries" />
-            <Button fx:id="exit" layoutX="552.0" mnemonicParsing="false" onAction="#exit" text="exit" />
-            <Button fx:id="run" layoutX="355.0" layoutY="324.0" mnemonicParsing="false" onAction="#run" text="Run">
+            <Button fx:id="reset" disable="true" layoutX="27.0" layoutY="52.0" mnemonicParsing="false" onAction="#reset" prefHeight="26.0" prefWidth="140.0" text="Reset" />
+            <CheckBox fx:id="stemming" layoutX="258.0" layoutY="482.0" mnemonicParsing="false" text="Stemming" />
+            <TextField fx:id="query" layoutX="54.0" layoutY="153.0" prefHeight="39.0" prefWidth="358.0" />
+            <ComboBox fx:id="languages" disable="true" layoutX="58.0" layoutY="204.0" prefHeight="39.0" prefWidth="180.0" promptText="Choose Language" />
+             <Button fx:id="displayTermsDictionary" disable="true" layoutX="434.0" layoutY="52.0" mnemonicParsing="false" onAction="#displayTermsDictionary" prefHeight="26.0" prefWidth="140.0" text="Display Terms" />
+             <Button fx:id="loadDictionaries" layoutX="233.0" layoutY="52.0" mnemonicParsing="false" onAction="#loadDictionaries" prefHeight="26.0" prefWidth="140.0" text="Load Dictionaries" />
+            <Button fx:id="run" layoutX="444.0" layoutY="153.0" mnemonicParsing="false" onAction="#run" prefHeight="39.0" prefWidth="120.0" text="Run">
                <font>
                   <Font name="Segoe UI Italic" size="18.0" />
                </font>
             </Button>
-             <MenuButton fx:id="citiesSelect" layoutX="340.0" layoutY="210.0" prefWidth="150.0" text="cities" />
+             <MenuButton fx:id="citiesSelect" layoutX="262.0" layoutY="204.0" prefHeight="39.0" prefWidth="150.0" text="cities" />
+            <TextField fx:id="corpusPath" layoutX="194.0" layoutY="340.0" prefHeight="39.0" prefWidth="219.0" text="Enter Path" />
+            <Label layoutX="263.0" layoutY="309.0" text="Corpus path" />
+            <TextField fx:id="postingPath" layoutX="194.0" layoutY="429.0" prefHeight="39.0" prefWidth="219.0" text="Enter Path" />
+            <Label layoutX="263.0" layoutY="395.0" text="Posting path" />
+            <Button fx:id="browseCorpus" layoutX="429.0" layoutY="340.0" mnemonicParsing="false" onAction="#browseCorpus" prefHeight="39.0" prefWidth="26.0" text="..." />
+            <Button fx:id="browsePosting" layoutX="429.0" layoutY="429.0" mnemonicParsing="false" onAction="#browsePosting" prefHeight="39.0" prefWidth="26.0" text="..." />
          </children>
       </AnchorPane>
    </children>
