--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" onMouseEntered="#initCities" prefWidth="605.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
+<GridPane alignment="center" hgap="10" onMouseEntered="#initCities" prefWidth="605.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="605.0">
          <children>
@@ -38,6 +38,7 @@
             <Label layoutX="263.0" layoutY="395.0" text="Posting path" />
             <Button fx:id="browseCorpus" layoutX="429.0" layoutY="340.0" mnemonicParsing="false" onAction="#browseCorpus" prefHeight="39.0" prefWidth="26.0" text="..." />
             <Button fx:id="browsePosting" layoutX="429.0" layoutY="429.0" mnemonicParsing="false" onAction="#browsePosting" prefHeight="39.0" prefWidth="26.0" text="..." />
+            <Button fx:id="browseCorpus1" layoutX="473.0" layoutY="436.0" mnemonicParsing="false" onAction="#loadPostingPath" prefHeight="12.0" prefWidth="101.0" text="load path" />
          </children>
       </AnchorPane>
    </children>
