--- a/src/main/resources/fxml/sample.fxml
+++ b/src/main/resources/fxml/sample.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" onMouseEntered="#initCities" prefWidth="605.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
+<GridPane alignment="center" hgap="10" onMouseEntered="#initCities" prefWidth="605.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="605.0">
          <children>
@@ -21,7 +21,7 @@
                   <Font name="Segoe UI Italic" size="18.0" />
                </font></Button>
             <Button fx:id="reset" disable="true" layoutX="113.0" layoutY="52.0" mnemonicParsing="false" onAction="#reset" prefHeight="26.0" prefWidth="140.0" text="Reset" />
-            <CheckBox fx:id="stemming" layoutX="258.0" layoutY="515.0" mnemonicParsing="false" text="Stemming" />
+            <CheckBox fx:id="stemming" layoutX="307.0" layoutY="515.0" mnemonicParsing="false" text="Stemming" />
             <TextField fx:id="query" layoutX="54.0" layoutY="99.0" prefHeight="39.0" prefWidth="358.0" text="Enter a query" />
             <ComboBox fx:id="languages" disable="true" layoutX="54.0" layoutY="201.0" prefHeight="39.0" prefWidth="180.0" promptText="Choose Language" />
              <Button fx:id="displayTermsDictionary" disable="true" layoutX="322.0" layoutY="52.0" mnemonicParsing="false" onAction="#displayTermsDictionary" prefHeight="26.0" prefWidth="140.0" text="Display Terms" />
@@ -52,6 +52,7 @@
                   <Font size="12.0" />
                </font>
             </Button>
+            <CheckBox fx:id="semantic" layoutX="202.0" layoutY="515.0" mnemonicParsing="false" text="Semantic" />
          </children>
       </AnchorPane>
    </children>
